[gd_scene load_steps=2 format=3 uid="uid://c6qfma4vgeoq1"]

[ext_resource type="Script" path="res://Game/Scripts/Ui/Main Menu.gd" id="1_vg0ms"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_vg0ms")

[node name="Gold label" type="Label" parent="."]
layout_mode = 0
offset_left = 704.0
offset_top = 128.0
offset_right = 1280.0
offset_bottom = 256.0
text = "Gold:
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Play" type="Button" parent="."]
layout_mode = 0
offset_left = 704.0
offset_top = 384.0
offset_right = 1280.0
offset_bottom = 512.0
text = "Play"

[node name="Shop" type="Button" parent="."]
layout_mode = 0
offset_left = 704.0
offset_top = 640.0
offset_right = 960.0
offset_bottom = 768.0
text = "Shop"

[node name="Upgrade" type="Button" parent="."]
layout_mode = 0
offset_left = 1024.0
offset_top = 640.0
offset_right = 1280.0
offset_bottom = 768.0
text = "Upgrades"

[node name="Exit" type="Button" parent="."]
layout_mode = 0
offset_left = 704.0
offset_top = 896.0
offset_right = 1280.0
offset_bottom = 1024.0
text = "Exit"

[node name="Cheat" type="Button" parent="."]
layout_mode = 0
offset_left = 1664.0
offset_right = 1920.0
offset_bottom = 64.0
text = "Cheat menu"

[node name="Help" type="Button" parent="."]
layout_mode = 0
offset_left = 1664.0
offset_top = 128.0
offset_right = 1920.0
offset_bottom = 192.0
text = "Help menu"

[node name="Reset" type="Button" parent="."]
layout_mode = 0
offset_left = 1664.0
offset_top = 256.0
offset_right = 1920.0
offset_bottom = 320.0
text = "Reset save file"

[node name="Reset warning" type="Label" parent="."]
layout_mode = 0
offset_left = 1664.0
offset_top = 384.0
offset_right = 1920.0
offset_bottom = 512.0
text = "Resetting save file will exit the game. You will need to relaunch it"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="Exit warning" type="Label" parent="."]
layout_mode = 0
offset_left = 704.0
offset_top = 832.0
offset_right = 1280.0
offset_bottom = 896.0
text = "Exit only using the exit button. Exitting any other way is not supported and your progress wont be saved"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[connection signal="pressed" from="Exit" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="Cheat" to="." method="_on_cheat_pressed"]
[connection signal="pressed" from="Help" to="." method="_on_help_pressed"]
[connection signal="pressed" from="Reset" to="." method="_on_reset_pressed"]
